--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ services: docker
 env:
   - VERSION=3.6 VARIANT=debian
   - VERSION=3.6 VARIANT=alpine
+  - VERSION=3.7 VARIANT=debian
+  - VERSION=3.7 VARIANT=alpine
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
